--- a/src/index.html
+++ b/src/index.html
@@ -408,6 +408,13 @@
                 </button>
               </td>
             </tr>
+            <tr>
+                <td colspan="5" class="py-5"><a href="#" class="text-blue-sf">View More Markets ></a></td>
+                <td class="hidden"></td>
+                <td class="hidden"></td>
+                <td class="hidden"></td>
+                <td class="hidden"></td>
+            </tr>
           </tbody>
         </table>
       </section>
@@ -525,10 +532,10 @@
     <footer class="max-w-6xl m-auto px-4 py-14 text-center sm:text-left grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 lg:grid-cols-5 gap-12">
         <div class="col-span-1 flex flex-col gap-6 items-center sm:items-start">
             <img src="/assets/shiftalLogo2x.png" class="w-44" alt="">
-            <a href="/register">
+            <a href="/register" class="w-full">
                 <button class="px-9 py-4 bg-blue-800 text-white whitespace-nowrap rounded-lg w-full max-w-xs">Register Now</button>
             </a>
-            <a href="/login">
+            <a href="/login" class="w-full">
                 <button class="px-9 py-4 bg-blue-sf text-white whitespace-nowrap rounded-lg w-full max-w-xs">Login Now</button>
             </a>
         </div>
